<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/flickrDGray"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/purpose"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/startup"
            android:layout_margin="1dp"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textSize="12sp"
            android:text="@string/purpose"/>

    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_below="@id/purpose"
        android:layout_width="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_height="0.5dp"
        android:background="@color/flickrBlue"/>
    
    <LinearLayout
        android:id="@+id/topLinear"
        android:layout_below="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchText"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:hint="search"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionSearch"/>

        <ImageButton
            android:id="@+id/searchButton"
            android:src="@drawable/mag_glass3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_below="@id/topLinear"
        android:layout_above="@+id/bottomRelative"
        android:background="@color/flickrPink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:indeterminateTint="@android:color/background_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/bottomRelative"
        android:background="@color/flickrBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/historyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"/>

        <Button
            android:layout_alignParentEnd="true"
            android:id="@+id/moreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_more"/>

    </RelativeLayout>

</RelativeLayout>